jena-shex/src/test/files/shexTest/negativeStructure/Cycle1Negation4.shex
# Negated circular ref to :S.
PREFIX :       <http://example.org/>

:S {:a @:S} AND NOT {
  :a {
    :b @:S
  }
}
